initial last commit

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/images/duo/fb7130289a205fadd2e196b9cc866555.svg.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DuoGIS - Geography Game</title>
+    <title>Duolingo - The world's most popular way to learn</title>
   </head>
   <body>
     <div id="root"></div>
